chore(app): update swagger info
